# fastkme

./: LICENSE  README.md  pyproject.toml  requirements.txt  trial.py.ipynb
fastkme/: __init__.py  kme.py
test/: test.py
