[project]
name = "fastkme"
version = "0.0.1"
authors = [
  { name="Rahul Goswami", email="yuvrajiro@gmail.com" },
]
description = "A faster Kaplan Mier Estimator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "black[jupyter]",
    "build",
    "coverage",
    "cython >=0.29",
    "packaging",
    "pre-commit",
    "pytest",
    "ruff",
    "setuptools-scm >=6.4",
    "tomli",
    "tox",
]